--- a/include/ueye_cam/CMakeLists.txt
+++ b/include/ueye_cam/CMakeLists.txt
@@ -4,4 +4,4 @@
 
 file(GLOB HEADERS RELATIVE ${CMAKE_CURRENT_SOURCE_DIR} *.hpp)
 
-install(FILES ${HEADERS} DESTINATION include)
+install(FILES ${HEADERS} DESTINATION include/${PROJECT_NAME})
