[ros] upgraded for ros2 foxy, not compatible with dashing.

--- a/src/driver/CMakeLists.txt
+++ b/src/driver/CMakeLists.txt
@@ -16,8 +16,21 @@ target_include_directories(
     $<BUILD_INTERFACE:${PROJECT_SOURCE_DIR}/include>
     $<BUILD_INTERFACE:${UEYE_INCLUDE_DIR}>
     $<INSTALL_INTERFACE:include>
-    $<INSTALL_INTERFACE:${UEYE_INCLUDE_DIR}>
 )
+
+# When building with the fetched on-the-fly headers and libraries, make sure
+# not to export the directories (which happen to be in the build folder).
+# CMake will complain if you try and do this.
+#
+# Caveat: this does rely on downstream targets outside of this package
+# being able to find the headers and libraries in system paths.
+if(UEYE_FOUND)
+  target_include_directories(
+    ${PROJECT_NAME}_driver
+    PUBLIC
+      $<INSTALL_INTERFACE:${UEYE_INCLUDE_DIR}>
+  )
+endif()
 
 target_link_libraries(
   ${PROJECT_NAME}_driver
